--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
     "sequelize": "^6.37.1",
+    "socket.io": "^4.7.4",
     "sqlite3": "^5.1.7"
   },
-  "type": "module"
+  "type": "module",
+  "main": "src/main.js"
 }
