--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "express": "^4.18.3",
     "sequelize": "^6.37.1",
     "socket.io": "^4.7.4",
     "sqlite3": "^5.1.7"
