--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,7 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.18.3",
+    "jsonwebtoken": "^9.0.2",
     "sequelize": "^6.37.1",
     "socket.io": "^4.7.4",
     "sqlite3": "^5.1.7"
